--- a/javascript-amazon-project-main/tests-jasmine/tests.html
+++ b/javascript-amazon-project-main/tests-jasmine/tests.html
@@ -20,7 +20,9 @@
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
   <script src="spec/PlayerSpec.js"></script>
-  <script src="moneyTest.js" type="module"></script>
+  
+  <script src="utils/moneyTest.js" type="module"></script>
+  <script type="module" src="data/cartTest.js"></script>
 
 </head>
 
