--- a/javascript-amazon-project-main/tests/tests.html
+++ b/javascript-amazon-project-main/tests/tests.html
@@ -24,6 +24,8 @@
   <script src="utils/moneyTest.js" type="module"></script>
   <script type="module" src="data/cartTest.js"></script>
   <script type="module" src="checkout/orderSummaryTest.js"></script>
+  <script type="module" src="tests-simple/moneyTest.js"></script>
+
 
 </head>
 
