exercises 17 coop class inheritance with testing jasmine

--- a/javascript-amazon-project-main/tests/tests.html
+++ b/javascript-amazon-project-main/tests/tests.html
@@ -22,9 +22,10 @@
   <script src="spec/PlayerSpec.js"></script>
   
   <script src="utils/moneyTest.js" type="module"></script>
-  <script type="module" src="data/cartTest.js"></script>
-  <script type="module" src="checkout/orderSummaryTest.js"></script>
-  <script type="module" src="tests-simple/moneyTest.js"></script>
+  <!-- <script type="module" src="data/cartTest.js"></script> -->
+  <script type="module" src="data/productTest.js"></script>
+  <!-- <script type="module" src="checkout/orderSummaryTest.js"></script>
+  <script type="module" src="tests-simple/moneyTest.js"></script> -->
 
 
 </head>
